--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Practice Git</title>
 </head>
 <body>
-	Practicing Git
+	<h1>Practicing Git</h1>
+	Hosting the page with github.
 </body>
 </html>
 
