--- a/index.html
+++ b/index.html
@@ -1,11 +1,124 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Practice Git</title>
+	<title>Assignments</title>
+	<style>
+		body{
+			font-family: Arial;
+		}
+		table{
+			text-align: center;
+			border: 1px solid black;
+		}
+		th, td {
+  			padding: 15px;
+  			border: 1px solid black;
+  			width: 20%;
+  			text-align: center;
+		}
+		th{
+			font-size: 20px;
+			color: #923030;
+		}
+		td{
+			font-size: 15px;
+		}
+
+	</style>
 </head>
 <body>
-	<h1>Practicing Git</h1>
-	Hosting the page with github.
+	<table>
+		<caption style="padding:10px ; font-weight:bold; font-size: 24px;">Assignments</caption>
+		<thead>
+			<tr>
+				<th>Title</th>
+				<th>Demo</th>
+				<th>Code</th>
+				<th>Status</th>
+				<th>Remark</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Github Assignment: Hosted Assignments List page </td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Design Assignment 1: 1A-home-search.jpg</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Design Assignment 2: 1A-settings.jpg</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Design Final Project</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>JS Assignment 1: Image Slider</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>JS Assignment 2: Image Slider with hold times</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td>Image slider</td>
+			</tr>
+			<tr>
+				<td>JS Assignment 3: Box Collision and Ant Smasher</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>JS Assignment 4: Car Lane Game with Bullet Implementation</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>JS Assignment 5: Flappy Bird</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td>Flappy Bird Game</td>
+			</tr>
+			<tr>
+				<td>JS Assignment 6: Helix Animation</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td>Animation</td>
+			</tr>
+			<tr>
+				<td>JS Final Project</td>
+				<td><a href="#">Demo</td>
+				<td><a href="#">Code</td>
+				<td>Complete</td>
+				<td></td>
+			</tr>
+				
+		</tbody>
+	</table>
 </body>
 </html>
 
