Add link to index

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		<tbody>
 			<tr>
 				<td>Github Assignment: Hosted Assignments List page </td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="https://lizaamatya.github.io/Leapfrog/">Index</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/blob/master/index.html">Index</td>
 				<td>Complete</td>
 				<td></td>
 			</tr>
