--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</tr>
 			<tr>
 				<td>Design Assignment 1: 1A-home-search.jpg</td>
-				<td><a href="project1/">Demo</td>
+				<td><a href="project1/">Design 1</td>
 				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/project1">Code</td>
 				<td>Complete</td>
 				<td></td>
