--- a/project1/index.html
+++ b/project1/index.html
@@ -40,7 +40,8 @@
 
             <div class="header-bottom">
                 <div class="header-bottom-left">
-                    ABOUT US
+                    <h1>ABOUT US</h1>
+
                 </div>
                 <div class="header-bottom-right">
                     <ul>
