--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 			</tr>
 			<tr>
 				<td>Design Assignment 2: 1A-settings.jpg</td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="design-assignment2/">Demo</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-assignment2">Code</td>
 				<td>Complete</td>
 				<td></td>
 			</tr>
