--- a/design-assignment2/index.html
+++ b/design-assignment2/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="body-wrapper">
             <div class="main-body">
-                <div class="image-slider">
+                <div class="image-slider-row1">
                     <div class="slideshow">
                         <img class="project-slideshow1" src="./images/slide-img.png">
                         <img class="project-slideshow" src="./images/slide-img.png">
@@ -86,6 +86,41 @@
                         <div class="slideshow-btn">
                             <img class="slider-prev" src="./images/prev-img-icon.png" alt="">
                             <img class="slider-next" src="./images/next-img-icon.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="image-slider-row2">
+                    <div class="slideshow-col1">
+                        <img class="blog-slideshow1" src="./images/slide-img.png">
+                        <img class="blog-slideshow" src="./images/slide-img.png">
+                        <img class="blog-slideshow" src="./images/slide-img.png">
+
+
+                        <div class="slide-text">
+                            <p>Blog Slideshow</p>
+                        </div>
+                        <div class="slideshow-btn">
+                            <img class="slider-prev" src="./images/prev-img-icon.png" alt="">
+                            <img class="slider-next" src="./images/next-img-icon.png" alt="">
+                        </div>
+                    </div>
+                    <div class="slideshow-col2">
+                        <div class="slidebar-col2row1">
+                            <img class="slidebar-slideshow1" src="./images/slide-img.png">
+                            <img class="slidebar-slideshow" src="./images/slide-img.png">
+                            <img class="slidebar-slideshow" src="./images/slide-img.png">
+                            <div class="slide-text">
+                                <p>Slidebar Slideshow</p>
+                            </div>
+                        </div>
+                        <div class="sidebar-gallery">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+
+
+
                         </div>
                     </div>
                 </div>
