--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</tr>
 			<tr>
 				<td>Design Assignment 2: 1A-settings.jpg</td>
-				<td><a href="design-assignment2/">Design-2/td>
+				<td><a href="design-assignment2/">Design-2</td>
 				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-assignment2">Code</td>
 				<td>Complete</td>
 				<td></td>
