--- a/design-assignment2/index.html
+++ b/design-assignment2/index.html
@@ -80,7 +80,7 @@
                         <img class="project-slideshow" src="./images/slide-img.png">
 
 
-                        <div class="slide-text">
+                        <div class="slide-text1">
                             <p>Project Slideshow</p>
                         </div>
                         <div class="slideshow-btn">
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="image-slider-row2">
+                <!-- <div class="image-slider-row2">
                     <div class="slideshow-col1">
                         <img class="blog-slideshow1" src="./images/slide-img.png">
                         <img class="blog-slideshow" src="./images/slide-img.png">
@@ -123,7 +123,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="footer-top-wrapper">
