--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 			<tr>
 				<td>Design Assignment 1: 1A-home-search.jpg</td>
 				<td><a href="project1/">Design 1</td>
-				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/project1">Code</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/project1">Design-1 Code</td>
 				<td>Complete</td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>Design Assignment 2: 1A-settings.jpg</td>
 				<td><a href="design-assignment2/">Design-2</td>
-				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-assignment2">Code</td>
-				<td>Complete</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-assignment2">Design-2 Code</td>
+				<td>Incomplete</td>
 				<td></td>
 			</tr>
 			<tr>
