--- a/project1/index.html
+++ b/project1/index.html
@@ -266,9 +266,9 @@
                         <p>Consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, consectetur. Eum qui, distinctio non rem. Accusamus corrupti quaerat pariatur suscipit repudiandae minus autem velit libero sit?</p>
                     </div>
                     <div class="row3-middle">
-                        <div class="row3-col1">
-                            <p>Our Happy Clients</p>
-                        </div>
+                        <span class="row3-col1">
+                            Our Happy Clients
+                        </span>
                         <div class="row3-col23 wrapper">
                             <div class="row3-col2">
                                 <img class="circle" src="./images/circle.png" alt="">
