--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <th>Title</th>
                 <th>Demo</th>
                 <th>Code</th>
-                <th>Status</th>
-                <th>Remark</th>
+                <!-- <th>Status</th> -->
+                <!-- <th>Remarks</th> -->
             </tr>
         </thead>
         <tbody>
@@ -49,78 +49,78 @@
                 <td>Github Assignment: Hosted Assignments List page </td>
                 <td><a href="https://lizaamatya.github.io/Leapfrog/">Index</td>
 				<td><a href="https://github.com/LizaAmatya/Leapfrog/blob/master/index.html">Index</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td>Complete</td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>Design Assignment 1: 1A-home-search.jpg</td>
 				<td><a href="project1/">Design 1</td>
 				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/project1">Design-1 Code</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td></td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>Design Assignment 2: 1A-settings.jpg</td>
 				<td><a href="design-assignment2/">Design-2</td>
 				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-assignment2">Design-2 Code</td>
-				<td>Incomplete</td>
-				<td></td>
+				<!-- <td></td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>Design Final Project</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td></td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 1: Image Slider</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td></td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 2: Image Slider with hold times</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td>Image slider</td>
+				<!-- <td>Complete</td> -->
+				<!-- <td>Image slider</td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 3: Box Collision and Ant Smasher</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td>Complete</td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 4: Car Lane Game with Bullet Implementation</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td>Complete</td> -->
+				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 5: Flappy Bird</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td>Flappy Bird Game</td>
+				<!-- <td>Complete</td> -->
+				<!-- <td>Flappy Bird Game</td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 6: Helix Animation</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td>Animation</td>
+				<!-- <td>Complete</td> -->
+				<!-- <td>Animation</td> -->
 			</tr>
 			<tr>
 				<td>JS Final Project</td>
 				<td><a href="#">Demo</td>
 				<td><a href="#">Code</td>
-				<td>Complete</td>
-				<td></td>
+				<!-- <td>Complete</td> -->
+				<!-- <td></td> -->
 			</tr>
 				
 		</tbody>
