--- a/index.html
+++ b/index.html
@@ -67,9 +67,16 @@
 				<!-- <td></td> -->
 			</tr>
 			<tr>
-				<td>Design Final Project</td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td>Design Final Static</td>
+				<td><a href="design-final-static/">Design Final Static</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-final-static">Design Final Static</td>
+				<!-- <td></td> -->
+				<!-- <td></td> -->
+			</tr>
+			<tr>
+				<td>Design Final Responsive</td>
+				<td><a href="design-final-responsive/">Design Final Responsive</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/design-final-responsive">Design Final Responsive</td>
 				<!-- <td></td> -->
 				<!-- <td></td> -->
 			</tr>
