--- a/design-assignment2/index.html
+++ b/design-assignment2/index.html
@@ -72,8 +72,8 @@
             <div class="header-arrow"></div>
         </div>
         <div class="body-wrapper">
-            <div class="main-body">
-                <div class="image-slider-row1">
+            <div class="main-body clearfix">
+                <div class="image-slider-row1 clearfix">
                     <div class="slideshow">
                         <img class="project-slideshow1" src="./images/slide-img.png">
                         <img class="project-slideshow" src="./images/slide-img.png">
@@ -81,7 +81,7 @@
 
 
                         <div class="slide-text1">
-                            <p>Project Slideshow</p>
+                            Project Slideshow
                         </div>
                         <div class="slideshow-btn">
                             <img class="slider-prev" src="./images/prev-img-icon.png" alt="">
@@ -89,120 +89,132 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="image-slider-row2">
-                    <div class="slideshow-col1">
-                        <img class="blog-slideshow1" src="./images/slide-img.png">
-                        <img class="blog-slideshow" src="./images/slide-img.png">
-                        <img class="blog-slideshow" src="./images/slide-img.png">
+
+                <div class="image-slider-row2 clearfix">
+                    <div class="slideshow-row2col1 clearfix ">
+                        <div class="slideshow clearfix">
+                            <img class="project-slideshow1" src="./images/slide-img.png">
+                            <img class="project-slideshow" src="./images/slide-img.png">
+                            <img class="project-slideshow" src="./images/slide-img.png">
 
 
-                        <div class="slide-text">
-                            <p>Blog Slideshow</p>
-                        </div>
-                        <div class="slideshow-btn">
-                            <img class="slider-prev" src="./images/prev-img-icon.png" alt="">
-                            <img class="slider-next" src="./images/next-img-icon.png" alt="">
-                        </div>
-                    </div>
-                    <div class="slideshow-col2">
-                        <div class="slidebar-col2row1">
-                            <img class="slidebar-slideshow1" src="./images/slide-img.png">
-                            <img class="slidebar-slideshow" src="./images/slide-img.png">
-                            <img class="slidebar-slideshow" src="./images/slide-img.png">
-                            <div class="slide-text">
-                                <p>Slidebar Slideshow</p>
+                            <div class="slide-text1">
+                                Blog Slideshow
+                            </div>
+                            <div class="slideshow-btn">
+                                <img class="slider-prev" src="./images/prev-img-icon.png" alt="">
+                                <img class="slider-next" src="./images/next-img-icon.png" alt="">
                             </div>
                         </div>
-                        <div class="sidebar-gallery">
-                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
-                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
-                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
-                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
-
-
-
-                        </div>
-                    </div>
-                </div> -->
-            </div>
-        </div>
-        <div class="footer-top-wrapper">
-            <div class="footer-top clearfix">
-                <div class="footer-left">
-                    <div class="footer-col1"><img src="./images/logo.png" alt="logo"><br>
-
-                        <p class="footer-col1-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatem quas neque voluptatum animi itaque reiciendis. </p><br>
-                        <p class="footer-info">Phone: 35461345</p>
-                        <p class="footer-info">Email: info@tollens.com</p>
                     </div>
 
-                    <div class="footer-col2">
-                        <p><strong>Company</strong></p>
-                        <ul>
-                            <li>About</li>
-                            <li>FAQ</li>
-                            <li>Contact</li>
-                            <li>Terms</li>
-                            <li>Privacy</li>
-                            <li>Testimonials</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="footer-right">
-                    <div class="footer-col3">
-                        <p><strong>Community</strong></p>
-                        <ul>
-                            <li>Blog</li>
-                            <li>Forum</li>
-                            <li>Support</li>
-                            <li>Newsletter</li>
 
-                        </ul>
-                    </div>
-                    <div class="footer-col4">
-                        <div class="blog-header">
-                            <span><p><i> from the </i><strong>BLOG</strong> </p></span>
-                        </div>
-                        <div class="blog1">
-                            <div class="blog-img1"><img src="./images/blog-img.png" alt="img"></div>
-                            <div class="blog-text1">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p class="blog-date">28 May, 2013</p>
+
+                    <div class="slideshow-row2col1">
+                        <div class="slideshow clearfix">
+                            <img class="project-slideshow1" src="./images/slide-img.png">
+                            <img class="project-slideshow" src="./images/slide-img.png">
+                            <img class="project-slideshow" src="./images/slide-img.png">
+
+
+                            <div class="slide-text1">
+                                Slidebar Slideshow
                             </div>
-                        </div>
-                        <div class=" blog2 ">
-                            <div class="blog-img2 "><img src="./images/blog-img.png " alt="img "></div>
-                            <div class="blog-text2 ">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p class="blog-date ">28 May, 2013</p>
+                            <div class="slideshow-btn">
+                                <img class="slider-prev" src="./images/prev-img-icon.png" alt="">
+                                <img class="slider-next" src="./images/next-img-icon.png" alt="">
                             </div>
+                            <!-- <div class="sidebar-col2row2">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                            <img class="slidebar-gallery-img" src="./images/slide-img.png">
+                        </div> -->
                         </div>
-
                     </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="footer-top-wrapper">
+        <div class="footer-top clearfix">
+            <div class="footer-left">
+                <div class="footer-col1"><img src="./images/logo.png" alt="logo"><br>
+
+                    <p class="footer-col1-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatem quas neque voluptatum animi itaque reiciendis. </p><br>
+                    <p class="footer-info">Phone: 35461345</p>
+                    <p class="footer-info">Email: info@tollens.com</p>
+                </div>
+
+                <div class="footer-col2">
+                    <p><strong>Company</strong></p>
+                    <ul>
+                        <li>About</li>
+                        <li>FAQ</li>
+                        <li>Contact</li>
+                        <li>Terms</li>
+                        <li>Privacy</li>
+                        <li>Testimonials</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="footer-col3">
+                    <p><strong>Community</strong></p>
+                    <ul>
+                        <li>Blog</li>
+                        <li>Forum</li>
+                        <li>Support</li>
+                        <li>Newsletter</li>
+
+                    </ul>
+                </div>
+                <div class="footer-col4">
+                    <div class="blog-header">
+                        <span><p><i> from the </i><strong>BLOG</strong> </p></span>
+                    </div>
+                    <div class="blog1">
+                        <div class="blog-img1"><img src="./images/blog-img.png" alt="img"></div>
+                        <div class="blog-text1">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="blog-date">28 May, 2013</p>
+                        </div>
+                    </div>
+                    <div class=" blog2 ">
+                        <div class="blog-img2 "><img src="./images/blog-img.png " alt="img "></div>
+                        <div class="blog-text2 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="blog-date ">28 May, 2013</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
-        <div class="footer-bottom-wrapper ">
-            <div class="footer-bottom ">
-                <div class="footer-bottom-left ">
-                    <p>2013 Tollens</p>
-                </div>
-                <div class="footer-bottom-right ">
-                    <div class="social-footer ">
-                        <ul>
-                            <li><img src="./images/fb2.png " alt="fb "></li>
-                            <li><img src="./images/google+2.png " alt="fb "></li>
-                            <li><img src="./images/tumblr.png " alt="fb "></li>
-                            <li><img src="./images/rss-icon.png " alt="fb "></li>
-                        </ul>
+    </div>
+    <div class="footer-bottom-wrapper ">
+        <div class="footer-bottom ">
+            <div class="footer-bottom-left ">
+                <p>2013 Tollens</p>
+            </div>
+            <div class="footer-bottom-right ">
+                <div class="social-footer ">
+                    <ul>
+                        <li><img src="./images/fb2.png " alt="fb "></li>
+                        <li><img src="./images/google+2.png " alt="fb "></li>
+                        <li><img src="./images/tumblr.png " alt="fb "></li>
+                        <li><img src="./images/rss-icon.png " alt="fb "></li>
+                    </ul>
 
-                    </div>
                 </div>
             </div>
-
-
-
         </div>
+
+
+
+    </div>
     </div>
     </div>
 </body>
