--- a/design-final-static/index.html
+++ b/design-final-static/index.html
@@ -10,10 +10,100 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+
 </head>
 
 <body>
+    <div class="page">
+        <header>
+            <div class="header-wrapper container clearfix">
+                <div class="logo">
+                    <a href="#"><img src="./images/logo.png" alt="logo"></a>
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
 
+                </nav>
+            </div>
+        </header>
+        <main>
+            <div class="row1-wrapper">
+                <div class="row1 container">
+                    <div class="row1-text">Try Design, You'll Like It</div>
+                    <div class="showme"><a href="#">SHOW ME THEN!!!</a> </div>
+                </div>
+
+            </div>
+            <div class="row2 container">
+                <div class="service clearfix">
+                    <ul>
+                        <li>
+                            <div class="web">
+                                <figure>
+                                    <img src="./images/service1.png" alt="web">
+                                    <!-- <a href="#">WEB DESIGN</a> -->
+                                    <figcaption>WEB DESIGN</figcaption>
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+
+                        </li>
+                        <li>
+                            <div class="graphic">
+                                <figure>
+                                    <img src="./images/service2.png" alt="graphic">
+
+                                    <figcaption>GRAPHIC DESIGN</figcaption>
+
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="program">
+                                <figure>
+                                    <img src="./images/service3.png" alt="programming">
+
+                                    <figcaption>PROGRAMMING</figcaption>
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="photo">
+                                <figure>
+                                    <img src="./images/service4.png" alt="photography">
+
+                                    <figcaption>PHOTOGRAPHY</figcaption>
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="need-service">
+                    <a href="#">NEED SERVICE?</a>
+
+                </div>
+            </div>
+
+        </main>
+    </div>
 </body>
 
 </html>
