--- a/design-final-static/index.html
+++ b/design-final-static/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <nav class="menu">
                     <ul>
-                        <li><a href="#">HOME</a></li>
+                        <li><a class="active" href="#">HOME</a></li>
                         <li><a href="#">SERVICES</a></li>
                         <li><a href="#">PORTFOLIO</a></li>
                         <li><a href="#">ABOUT</a></li>
@@ -101,7 +101,47 @@
 
                 </div>
             </div>
+            <div class="row3-wrapper">
+                <div class="row3 container">
+                    <div class="row3-text">The Design That Likes To Say Yes.</div>
+                    <div class="row3-para">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus ex molestiae explicabo laboriosam eius nemo rerum praesentium deleniti, eligendi quidem saepe suscipit obcaecati autem, ea doloremque assumenda placeat eos a.</p>
+                    </div>
+                    <div class="screen">
+                        <div class="left-screen">
+                            <figure class="img-merge"><img src="./images/screen2.png" alt="screen"></figure>
+                            <figure class="img-merge"><img src="./images/google2.png" alt="screen"></figure>
 
+                        </div>
+                        <div class="middle-screen">
+                            <figure><img src="./images/screen.png" alt="screen"></figure>
+                            <figure><img src="./images/google1.png" alt="screen"></figure>
+                        </div>
+                        <div class="right-screen">
+                            <figure><img src="./images/screen2.png" alt="screen"></figure>
+                            <figure><img src="./images/google2.png" alt="screen"></figure>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row4 container clearfix">
+                <div class="phone">
+                    <figure><img class="left-phn" src="./images/phn-1.png" alt="phone"></figure>
+                    <figure><img class="right-phn" src="./images/phn-2.png" alt="phone"></figure>
+                </div>
+                <div class="row4-info">
+                    <div class="responsive">Fully Responsive</div>
+                    <div class="row4-para">
+                        <p>Saepe consectetur culpa at distinctio eveniet! Officia reiciendis repellat blanditiis fugiat voluptas earum, velit autem vel ipsam itaque ullam nemo qui debitis!</p>
+                        <p>Voluptate nemo corrupti ad, laudantium mollitia eos nam dolores magnam? Quisquam aspernatur nemo optio architecto doloremque modi rerum repellendus magnam vel voluptate!</p>
+                    </div>
+                    <div class="order">
+                        <a href="#">ORDER ME ONE</a>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </body>
