--- a/design-final-static/index.html
+++ b/design-final-static/index.html
@@ -107,21 +107,27 @@
                     <div class="row3-para">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus ex molestiae explicabo laboriosam eius nemo rerum praesentium deleniti, eligendi quidem saepe suscipit obcaecati autem, ea doloremque assumenda placeat eos a.</p>
                     </div>
-                    <div class="screen">
-                        <div class="left-screen">
-                            <figure class="img-merge"><img src="./images/screen2.png" alt="screen"></figure>
-                            <figure class="img-merge"><img src="./images/google2.png" alt="screen"></figure>
+                    <div class="screen clearfix">
+                        <ul>
+                            <li>
+                                <div class="left-screen">
+                                    <figure><img src="./images/screen2.png" alt="screen"></figure>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="middle-screen">
+                                    <figure><img src="./images/screen.png" alt="screen"></figure>
 
-                        </div>
-                        <div class="middle-screen">
-                            <figure><img src="./images/screen.png" alt="screen"></figure>
-                            <figure><img src="./images/google1.png" alt="screen"></figure>
-                        </div>
-                        <div class="right-screen">
-                            <figure><img src="./images/screen2.png" alt="screen"></figure>
-                            <figure><img src="./images/google2.png" alt="screen"></figure>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="right-screen">
+                                    <figure><img src="./images/screen2.png" alt="screen"></figure>
 
-                        </div>
+
+                                </div>
+                            </li>
+                        </ul>
                     </div>
 
                 </div>
