--- a/design-final-responsive/index.html
+++ b/design-final-responsive/index.html
@@ -10,10 +10,157 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+
 </head>
 
 <body>
+    <div class="page">
+        <header>
+            <div class="header-wrapper container clearfix">
+                <div class="logo">
+                    <a href="#"><img src="./images/logo.png" alt="logo"></a>
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a class="active" href="#">HOME</a></li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
 
+                </nav>
+                <div class=icon>
+                    <button class="dropbtn">
+                        <div class="menuicon"></div>
+                        <div class="menuicon"></div>
+                        <div class="menuicon"></div>
+                    </button>
+                    <div class="dropdown-content">
+                        <ul>
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">SERVICES</a></li>
+                            <li><a href="#">PORTFOLIO</a></li>
+                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="row1-wrapper">
+                <div class="row1 container">
+                    <div class="row1-text">Try Design, You'll Like It</div>
+                    <div class="showme"><a href="#">SHOW ME THEN!!!</a> </div>
+                </div>
+
+            </div>
+            <div class="row2 container">
+                <div class="service clearfix">
+                    <ul>
+                        <li>
+                            <div class="web">
+                                <figure>
+                                    <img src="./images/service1.png" alt="web">
+                                    <!-- <a href="#">WEB DESIGN</a> -->
+                                    <figcaption>WEB DESIGN</figcaption>
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+
+                        </li>
+                        <li>
+                            <div class="graphic">
+                                <figure>
+                                    <img src="./images/service2.png" alt="graphic">
+
+                                    <figcaption>GRAPHIC DESIGN</figcaption>
+
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="program">
+                                <figure>
+                                    <img src="./images/service3.png" alt="programming">
+
+                                    <figcaption>PROGRAMMING</figcaption>
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="photo">
+                                <figure>
+                                    <img src="./images/service4.png" alt="photography">
+
+                                    <figcaption>PHOTOGRAPHY</figcaption>
+                                </figure>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="need-service">
+                    <a href="#">NEED SERVICE?</a>
+
+                </div>
+            </div>
+            <div class="row3-wrapper">
+                <div class="row3 container">
+                    <div class="row3-text">The Design That Likes To Say Yes.</div>
+                    <div class="row3-para">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus ex molestiae explicabo laboriosam eius nemo rerum praesentium deleniti, eligendi quidem saepe suscipit obcaecati autem, ea doloremque assumenda placeat eos a.</p>
+                    </div>
+                    <div class="screen">
+                        <div class="left-screen">
+                            <figure class="img-merge"><img src="./images/screen2.png" alt="screen"></figure>
+                            <figure class="img-merge"><img src="./images/google2.png" alt="screen"></figure>
+
+                        </div>
+                        <div class="middle-screen">
+                            <figure><img src="./images/screen.png" alt="screen"></figure>
+                            <figure><img src="./images/google1.png" alt="screen"></figure>
+                        </div>
+                        <div class="right-screen">
+                            <figure><img src="./images/screen2.png" alt="screen"></figure>
+                            <figure><img src="./images/google2.png" alt="screen"></figure>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row4 container clearfix">
+                <div class="phone">
+                    <figure><img class="left-phn" src="./images/phn-1.png" alt="phone"></figure>
+                    <figure><img class="right-phn" src="./images/phn-2.png" alt="phone"></figure>
+                </div>
+                <div class="row4-info">
+                    <div class="responsive">Fully Responsive</div>
+                    <div class="row4-para">
+                        <p>Saepe consectetur culpa at distinctio eveniet! Officia reiciendis repellat blanditiis fugiat voluptas earum, velit autem vel ipsam itaque ullam nemo qui debitis!</p>
+                        <p>Voluptate nemo corrupti ad, laudantium mollitia eos nam dolores magnam? Quisquam aspernatur nemo optio architecto doloremque modi rerum repellendus magnam vel voluptate!</p>
+                    </div>
+                    <div class="order">
+                        <a href="#">ORDER ME ONE</a>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 
 </html>
