design final modified

--- a/design-final-static/index.html
+++ b/design-final-static/index.html
@@ -148,6 +148,136 @@
                     </div>
                 </div>
             </div>
+            <div class="row5-wrapper">
+                <div class="row5 container">
+                    <div class="row5-text">The Design That Likes To Say Yes.</div>
+                    <div class="row5-para">
+                        <p> Sit amet consectetur adipisicing elit. Pariatur reprehenderit ducimus, repellendus eaque quidem obcaecati. Iure unde cum veniam inventore aliquid iste, est veritatis! Tempore pariatur animi quae reprehenderit ducimus.</p>
+                    </div>
+                    <nav class="service-menu clearfix">
+                        <ul>
+                            <li>
+                                <a class="active" href="#">ALL</a>
+                            </li>
+                            <li>
+                                <a href="#">WEB</a>
+                            </li>
+                            <li>
+                                <a href="#">PHOTOGRAPHY</a>
+                            </li>
+                            <li>
+                                <a href="#">GRAPHIC</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="service-card clearfix">
+                        <ul>
+                            <li>
+                                <div class="card">
+                                    <figure><img src="./images/card-img.png" alt="img"></figure>
+
+                                    <figcaption>WEB DESIGN</figcaption>
+                                    <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="card">
+                                    <figure><img src="./images/card-img.png" alt="img"></figure>
+                                    <div class="card-bcg">
+                                        <figcaption>PHOTOGRAPHY</figcaption>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="card">
+                                    <figure><img src="./images/card-img.png" alt="img"></figure>
+                                    <div class="card-bcg">
+                                        <figcaption>GRAPHIC DESIGN</figcaption>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+
+                                    </div>
+
+                                </div>
+                            </li>
+                            <li>
+                                <div class="card">
+                                    <figure><img src="./images/card-img.png" alt="img"></figure>
+                                    <div class="card-bcg">
+                                        <figcaption>WEB DESIGN</figcaption>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="card">
+                                    <figure><img src="./images/card-img.png" alt="img"></figure>
+                                    <div class="card-bcg">
+                                        <figcaption>PROGRAMMING</figcaption>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="card">
+                                    <figure><img src="./images/card-img.png" alt="img"></figure>
+                                    <div class="card-bcg">
+
+                                        <figcaption>PROGRAMMING</figcaption>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="arrow-down">
+                        <figure>
+                            <a href="#" class="active"><img src="./images/arrow-down.png" alt="arrow-down"></a>
+                        </figure>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="row6-wrapper">
+                <div class="row6 container clearfix">
+                    <ul>
+                        <li>
+                            <div class="stats">
+                                <figure><img src="./images/project-icon.png" alt="project"></figure>
+                                <div class="project-stats">2093</div>
+                                <p>COMPLETED PROJECTS</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <figure><img src="./images/click-icon.png" alt="click"></figure>
+                                <div class="click-stats">9135694</div>
+                                <p>CLICK PRESSED</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <figure><img src="./images/mail-icon.png" alt="mail"></figure>
+                                <div class="mail-stats">9564</div>
+                                <p>MAILS SENT AND RECEIVED</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <figure><img src="./images/comment-icon.png" alt="comment"></figure>
+                                <div class="comment-stats">712</div>
+                                <p>JOKES TOLD</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
         </main>
     </div>
 </body>
